# The-Living-Agent

./: .gitignore  1README.md  CITATION.cff  LICENSE  README.md  Recursive-Intelligence-Pumping-for-Continual-Learning-on-ARC-AGI-3.md  Text-as-Code.md  agent_v2_production.py  install.ps1  pyproject.toml  root.md  soul.md  start.bat  start.sh
heyting_bridge/: living_agent_common.py  living_agent_grid_builder.py  living_agent_hive_publisher.py  living_agent_learning_loop.py  living_agent_sns_embeddings.py  living_agent_verify.py
knowledge/: biological_computing.md  experiment_quantum_optimizer.md  grid_index.md  missing_nodes_on_topological_qubits.md  proof_of_discovery.md  quantum_physics.md  root_knowledge.md  silicon_infrastructure.md  synthesis_chamber.md
knowledge/grid/: cell_R0_C0.md  cell_R0_C1.md  cell_R0_C10.md  cell_R0_C11.md  cell_R0_C12.md  cell_R0_C13.md  cell_R0_C14.md  cell_R0_C15.md  cell_R0_C2.md  cell_R0_C3.md  cell_R0_C4.md  cell_R0_C5.md  cell_R0_C6.md  cell_R0_C7.md  cell_R0_C8.md  cell_R0_C9.md  cell_R10_C0.md  cell_R10_C1.md  cell_R10_C10.md  cell_R10_C11.md  cell_R10_C12.md  cell_R10_C13.md  cell_R10_C14.md  cell_R10_C15.md  cell_R10_C2.md  cell_R10_C3.md  cell_R10_C4.md  cell_R10_C5.md  cell_R10_C6.md  cell_R10_C7.md  cell_R10_C8.md  cell_R10_C9.md  cell_R11_C0.md  cell_R11_C1.md  cell_R11_C10.md  cell_R11_C11.md  cell_R11_C12.md  (+219 more)
meta/: gap_analysis.md  mutation_chamber.md
skills/: experiment_runner.md  lab-usage.skill  scientific-research-procedure.skill  skill_index.md  synthesis.md  web_search.md
tests/: test_agent.py  test_cli.py  test_grid.py
(+4092 files in other folders)
